--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="stylesheet" href="css/tailwind.min.css" >
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-      <link rel="stylesheet" href="../VYF/scss/custom.css">
+      <link rel="stylesheet" href="css/all.css">
+      <link rel="stylesheet" href="css/custom.css">
       <title>image</title>
       <style>
         .circle {
@@ -101,8 +101,8 @@
      
       
       <!-- JavaScript -->
-      <script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+      <script src="js/html2canvas.min.js"></script>
+      <script src="js/jquery-3.3.1.slim.min.js"></script>
       <script>
             html2canvas(document.querySelector("#takepicofthis")).then(canvas => {
                 var fullQuality = canvas.toDataURL('image/jpeg', 1.0);
